--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   provider: ^6.1.2
-
+  flutter_launcher_icons: ^0.14.3
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha: true
+  image_path: "assets/images/logo_main.png"
+  min_sdk_android: 21
+  adaptive_icon_background: "#ffffff"
 dev_dependencies:
   flutter_test:
     sdk: flutter
