--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   dio: ^5.8.0+1
   provider: ^6.1.2
   flutter_launcher_icons: ^0.14.3
+  shared_preferences: ^2.1.0
+  connectivity_plus: ^6.0.2
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
