--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   shared_preferences: ^2.1.0
   connectivity_plus: ^6.1.2
+  image_picker: ^1.1.2
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
