--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,12 @@ dependencies:
   shared_preferences: ^2.1.0
   connectivity_plus: ^6.1.2
   image_picker: ^1.1.2
+  flutter_screenutil: ^5.9.3
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   remove_alpha: true
-  image_path: "assets/images/logo_main.png"
+  image_path: "assets/images/logomain.png"
   min_sdk_android: 21
   adaptive_icon_background: "#ffffff"
 dev_dependencies:
